--- a/virus.html
+++ b/virus.html
@@ -20,7 +20,7 @@
             
         </header>
         <section class="content">
-            <button class="button-1">what</button>
+            <button onClick-"this.innerHTML = 'ever' class="button-1">what</button>
             <script>
                 function whatEver() {
                     alert("ever")
