--- a/virus.html
+++ b/virus.html
@@ -4,7 +4,7 @@
     
     <head>
         <title> gloops poop </title>
-        <link rel="icon" type="image/png" href="cute cat.jpg"/>
+        <link rel="icon" type="image/png" href="images\cute cat.jpg"/>
         <link rel="stylesheet" href="styles.css"/>
     </head>
             <!--hi-->
