--- a/virus.html
+++ b/virus.html
@@ -36,7 +36,7 @@
                 <ul style="list-style: none;">
                     <li class="youtube-logo">
                         <a  href="https://www.youtube.com/watch?v=jKcRDgobqzA" target="_blank">
-                        <img src= "youtube logo.png" width="35px">
+                        <img src= "images\youtube logo.png" width="35px">
                         </a>
                     </li>
                 </ul> 
